--- a/task/build.gradle
+++ b/task/build.gradle
@@ -2,10 +2,10 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 
 plugins {
-    id 'org.springframework.boot' version '3.1.4'
+    id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
-    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta2'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.20-Beta2'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20-RC'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.20-RC'
 }
 
 java {
@@ -39,7 +39,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.2'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.4'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.7'
 
 
