--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -73,5 +73,8 @@ zp:
 #      digestACL: "zkadmin:Abcd1234"
     task-cfg:
       address: "127.0.0.1:2181"
+  instance-tag: "1.1"
 #      registIp: "10.18.5.26"
 #      digestACL: "zkadmin:Abcd1234"
+
+
